k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: vodno-ridebook
  labels:
    app: frontend
    app.kubernetes.io/part-of: vodno-ridebook
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
